<resources>
    <string name="app_name">알파보카</string>
    <string name="app_name_eng">Alpha Vocab</string>

    <!--  로그인  -->
    <string name="sign_in">로그인</string>
    <string name="sign_up">회원가입</string>
    <string name="email">이메일</string>
    <string name="password">비밀번호</string>
    <string name="confirm_pwd">비밀번호 확인</string>
    <string name="name">이름</string>
    <string name="confirm">확인</string>
    <string name="cancel">취소</string>

    <!--  단어장, 체크 단어  -->
    <string name="add_vocab">단어장 생성</string>
    <string name="input_vacab_name">단어장 이름을 입력하세요</string>
    <string name="hide_english">영어</string>
    <string name="hide_korean">한국어</string>
    <string name="english">영어 단어</string>
    <string name="korean">한국어 뜻</string>
    <string name="reset">초기화</string>
    <string name="delete">삭제</string>
    <string name="check">체크</string>
    <string name="uncheck">체크 해제</string>
    <string name="add_word">단어 추가</string>
    <string name="no_vocab">추가된 단어장이 없습니다</string>
    <string name="no_checked_word">체크된 단어가 없습니다</string>

    <!--  단어 추가  -->
    <string name="input_eng_word">영어 단어 입력</string>
    <string name="input_kor_word">뜻 입력</string>
    <string name="eng_example">apple</string>
    <string name="kor_example">사과</string>
    <string name="add">추가하기</string>
    <string name="edit_word">수정할 단어를 선택하세요</string>

    <!--  단어장 추가  -->
    <string name="search_vocab">단어장 검색</string>
    <string name="vocab_name">단어장 이름</string>
    <string name="vocab_creator">단어장 생성자</string>
    <string name="vocab_name_example">단어장 A</string>
    <string name="vocab_creator_example">Creator.S</string>
    <string name="search">검색</string>
    <string name="result_vocab">검색 결과</string>
    <string name="info_text">단어장을 검색해보세요</string>
    <string name="move_to_my_vocabs">내 단어장에 추가</string>
    <string name="no_word">추가된 단어가 없습니다</string>

    <!--  개인 설정  -->
    <string name="my_info">내 정보</string>
    <string name="added_word">추가한 단어</string>
    <string name="checked_word">체크한 단어</string>
    <string name="setting">설정</string>
    <string name="sign_out">로그아웃</string>
    <string name="change_name">이름 변경</string>
    <string name="new_name">새 이름 입력</string>
    <string name="change_pwd">비밀번호 변경</string>
    <string name="origin_pwd">기존 비밀번호</string>
    <string name="new_pwd">새 비밀번호</string>
    <string name="check_new_pwd">새 비밀번호 확인</string>
    <string name="remove_ad">광고 제거</string>
    <string name="delete_account">탈퇴하기</string>

    <!--  광고 제거  -->
    <string name="product_list_text">상품</string>
    <string name="remove_ad_subs_text">정기 결제</string>
    <string name="remove_ad_subs_price">990원/월</string>
    <string name="remove_ad_subs_desc">월 990원으로 광고를 제거합니다</string>
    <string name="remove_ad_annual_text">연간 결제</string>
    <string name="remove_ad_annual_price_org">11,880원</string>
    <string name="remove_ad_annual_price_sale">8,900원/년</string>
    <string name="remove_ad_annual_desc">연간 결제로 정기 결제보다 25% 저렴하게 광고를 제거합니다</string>
    <string name="remove_ad_free_text">무료 광고 제거</string>
    <string name="remove_ad_free_desc">광고를 시청하고 6시간 동안 배너 광고를 제거할 수 있습니다</string>
    
    <!--  로딩 텍스트  -->
    <string name="loading_vacabs">단어장 불러오는 중..</string>
    <string name="loading_words">단어 불러오는 중..</string>
    <string name="searching_vacabs">단어장 검색 중..</string>
    <string name="loading_product">상품 불러오는 중..</string>
    <string name="loading_ad">광고 불러오는 중..</string>

    <!--  애드몹 아이디  -->
    <string name="admob_app_id">ca-app-pub-6312729833573027~5328976275</string>
    <string name="banner_ad_unit_id">ca-app-pub-6312729833573027/8314232267</string>
    <string name="banner_ad_unit_id_for_test">ca-app-pub-3940256099942544/6300978111</string>
    <string name="reward_ad_unit_id">ca-app-pub-6312729833573027/9562707080</string>
    <string name="reward_ad_unit_id_for_test">ca-app-pub-3940256099942544/5224354917</string>

    <!--  앱 버전  -->
    <string name="version">버전 2.3.1</string>

</resources>