<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".tab.AddWordFragment">

    <LinearLayout
        android:id="@+id/add_word_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:text="@string/input_eng_word"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/eng_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:textAlignment="center"
            android:hint="@string/eng_example"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="40dp"
            android:text="@string/input_kor_word"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/kor_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:textAlignment="center"
            android:hint="@string/kor_example"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="100dp"
            android:text="@string/add"
            android:textColor="@color/black"
            android:backgroundTint="@color/white"
            app:strokeColor="@color/black"
            app:strokeWidth="1dp"
            app:rippleColor="@color/gray"/>

    </LinearLayout>

</FrameLayout>