<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/origin_pwd_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/origin_pwd"
        android:inputType="textPassword"
        android:maxLength="30" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/new_pwd_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/new_pwd"
        android:inputType="textPassword"
        android:maxLength="30" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/check_new_pwd_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/check_new_pwd"
        android:inputType="textPassword"
        android:maxLength="30" />

</LinearLayout>