<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_gray"
    tools:context=".SignInActivity">

    <LinearLayout
        android:id="@+id/sign_in_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textSize="40sp"
            android:layout_marginBottom="200dp"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:inputType="textEmailAddress"
            android:hint="@string/email"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:inputType="textPassword"
            android:hint="@string/password"/>

        <LinearLayout
            android:id="@+id/btn_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingStart="40dp"
            android:paddingEnd="40dp"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sign_in_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="5dp"
                android:text="@string/sign_in"
                android:textColor="@color/gray"
                android:backgroundTint="@color/white"
                app:strokeColor="@color/light_gray"
                app:strokeWidth="1dp"
                app:rippleColor="@color/gray"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sign_up_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="5dp"
                android:text="@string/sign_up"
                android:backgroundTint="@color/gray"
                app:rippleColor="@color/white"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>