<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/words_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".WordsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/toolbar_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="20dp"
                app:title="A 단어장"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/add_word_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="10dp"
                android:text="@string/add_word"
                android:textColor="@color/black"
                android:backgroundTint="@color/white"
                app:strokeColor="@color/black"
                app:strokeWidth="1dp"
                app:rippleColor="@color/gray"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black"/>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:id="@+id/edit_btn_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_above="@id/btn_container"
        android:orientation="horizontal"
        android:elevation="8dp"
        android:visibility="gone">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/delete_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="5dp"
            android:text="@string/delete"
            android:textColor="@color/black"
            android:backgroundTint="@color/white"
            app:strokeColor="@color/black"
            app:strokeWidth="1dp"
            app:rippleColor="@color/gray"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/check_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="80dp"
            android:text="@string/check"
            android:backgroundTint="@color/black"
            app:rippleColor="@color/white"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/words_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/btn_container"
        android:layout_below="@id/appbar_container"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        android:layout_below="@id/words_list"/>

    <LinearLayout
        android:id="@+id/btn_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/hide_eng_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="5dp"
            android:text="@string/hide_english"
            android:textColor="@color/black"
            android:backgroundTint="@color/white"
            app:strokeColor="@color/black"
            app:strokeWidth="1dp"
            app:rippleColor="@color/gray"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/reset_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:text="@string/reset"
            android:backgroundTint="@color/black"
            app:rippleColor="@color/white"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/hide_kor_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="20dp"
            android:text="@string/hide_korean"
            android:textColor="@color/black"
            android:backgroundTint="@color/white"
            app:strokeColor="@color/black"
            app:strokeWidth="1dp"
            app:rippleColor="@color/gray"/>

    </LinearLayout>

</RelativeLayout>